--- a/styles/basics.css
+++ b/styles/basics.css
@@ -1,6 +1,6 @@
 /*Color and Font Families*/
 .animals-color{
-    color: red;
+    color: green;
     font-size: 30px;
     font-family: Arial, Helvetica, sans-serif;
 }
